[wang]附近校区自动换行

--- a/XEEnglish/ExpendCalss/Home/NearSchoolVC/NearSchoolCell.xib
+++ b/XEEnglish/ExpendCalss/Home/NearSchoolVC/NearSchoolCell.xib
@@ -43,8 +43,8 @@
                         <rect key="frame" x="10" y="50" width="280" height="140"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ew1-gQ-FQ9">
-                        <rect key="frame" x="10" y="200" width="280" height="30"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ew1-gQ-FQ9">
+                        <rect key="frame" x="10" y="200" width="280" height="40"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
