--- a/XEEnglish/ExpendCalss/Setting/ExpendRecord/ExpendRecordCell.xib
+++ b/XEEnglish/ExpendCalss/Setting/ExpendRecord/ExpendRecordCell.xib
@@ -8,7 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExpendRecordVCCell" id="DKU-1m-f7Q" customClass="ExpendRecordCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="190"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DKU-1m-f7Q" id="dQI-e9-3mA">
                 <autoresizingMask key="autoresizingMask"/>
@@ -74,10 +74,35 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="购买课时" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2iI-UO-RcJ">
+                        <rect key="frame" x="10" y="140" width="80" height="20"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJa-tX-eLf">
+                        <rect key="frame" x="120" y="140" width="180" height="20"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="支付金额" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eGm-EJ-jDA">
+                        <rect key="frame" x="10" y="165" width="80" height="20"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vA5-yx-48u">
+                        <rect key="frame" x="120" y="165" width="180" height="20"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="expendRecordCourseHours" destination="hJa-tX-eLf" id="HBy-AS-74X"/>
                 <outlet property="expendRecordCourseName" destination="1PL-ae-9EX" id="umg-vK-ghI"/>
+                <outlet property="expendRecordCoursePrice" destination="vA5-yx-48u" id="qOE-Uh-GOl"/>
                 <outlet property="expendRecordCreateTime" destination="f7A-ev-2RB" id="c8H-DL-RTk"/>
                 <outlet property="expendRecordName" destination="byC-5t-8QW" id="SLl-Ea-LF0"/>
                 <outlet property="expendRecordPhone" destination="r1k-LW-B3a" id="8fs-Bd-uF8"/>
